# line_following_robot_ros2

./: README.md
src/simple_robot_description/: package.xml  setup.cfg  setup.py
src/simple_robot_description/config/: arm_1dof.yaml
src/simple_robot_description/launch/: gazebo.launch.py  rviz.launch.py
src/simple_robot_description/models/arm_1dof/: arm_1dof.urdf  arm_1dof.xacro  joints.xacro  macros.xacro  model.config
src/simple_robot_description/models/track/: model.config  model.sdf
src/simple_robot_description/models/track/materials/scripts/: track.material
src/simple_robot_description/simple_robot_description/: joint_commander.py
src/simple_robot_description/worlds/: empty.world
